<resources>
    <string name="app_name">All About Fishing</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="btn_sign_in">Sign in</string>
    <string name="btn_signup">Sign up</string>
    <string name="btn_login">Login</string>
    <string name="lbl_forgot_pass">Forgot My Password</string>
    <string name="lbl_logo">Logo</string>
    <string name="lbl_login">Login</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>

    <string name="lbl_create_account">Create Account</string>
    <string name="txt_name">Name</string>
    <string name="txt_phone">Phone</string>

    <string name="btn_send_forgot_pass">Send</string>
    <string name="msg_email_verified">Verify your Email Address!</string>

    <string name="lbl_name_place">Name Place</string>
    <string name="lbl_desc_place">Description Place</string>


    <string name="title_places">Places</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="btn_update_profile">Save</string>

    <string name="nav_places">Places</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_map">Map of Places</string>
    <string name="nav_about">About</string>
    <string name="nav_logout">Logout</string>

    <string name="lbl_desc_detail">DESCRIPTION</string>
    <string name="lbl_services_detail">SERVICES</string>
    <string name="lbl_fish_detail">FISH</string>

    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="tab_text_1">Description</string>
    <string name="tab_text_2">Gallery</string>
    <string name="tab_text_3">Contact</string>

    <string name="post_photo_subtitle">Publish</string>
    <string name="new_photo_subtitle">Subtitle</string>

    <string name="title_new_photo">Post New Photo</string>

    <string name="lbl_img_general">Image</string>
    <string name="lbl_txt_general">Text</string>
    <string name="lbl_dash_load">Loading. . .</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
